# ackermann-odometry

./: .gitignore  .gitmodules  Dockerfile  LICENSE  README.md  docker-compose.yml  plotjuggler-layout.xml
docker/: bag.Dockerfile  joy.Dockerfile  plot.Dockerfile
scripts/: build.sh  config.sh  down.sh  up.sh
src/ackermann_controller/: package.xml  setup.cfg  setup.py
src/ackermann_controller/ackermann_controller/: ackermann_teleop_joy.py
src/ackermann_controller/launch/: joy.launch.py
src/ackermann_interfaces/: CMakeLists.txt  package.xml
src/ackermann_interfaces/msg/: AckermannFeedback.msg
src/ackermann_odometry/: package.xml  setup.cfg  setup.py
src/ackermann_odometry/ackermann_odometry/: odom_publisher.py
