<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>ackermann_odometry</name>
  <version>0.0.0</version>
  <description>ROS Node to publish Odometry message for ackermann vehicle based on wheel speed and steering angle</description>
  <maintainer email="aposhian.dev@gmail.com">Adam Aposhian</maintainer>
  <license>MIT</license>

  <exec_depend>ackermann_interfaces</exec_depend>
  <exec_depend>python3-scipy</exec_depend>

  <export>
    <build_type>ament_python</build_type>
  </export>
</package>
